# prog3

./: .gitignore  CMakeLists.txt  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  EnvironmentSprite.cpp  EnvironmentSprite.h  GameEngine.cpp  GameEngine.h  HUD.cpp  HUD.h  HUDElement.cpp  HUDElement.h  HUDSprite.cpp  HUDSprite.h  InputHandler.cpp  InputHandler.h  InputMgr.cpp  InputMgr.h  Level.cpp  Level.h  LevelManager.cpp  LevelManager.h  Main.cpp  MemberFuncCallback.h  NonCollEnvironmentSprite.cpp  Observer.cpp  Observer.h  PCSprite.cpp  PCSprite.h  PhysicsSprite.cpp  PhysicsSprite.h  Player.cpp  Player.h  PlayerState.h  README.md  ScoreBoard.cpp  ScoreBoard.h  Sprite.cpp  (+31 more)
collision/: CollisionStrategy.h  GroundBehaivor.cpp  GroundBehaivor.h
enemy/: Enemy.cpp  Enemy.h  FlyingEnemy.cpp  FlyingEnemy.h  WalkingEnemy.cpp  WalkingEnemy.h
environment/: EnvironmentSprite.cpp  EnvironmentSprite.h
hud/: HUD.cpp  HUD.h  HUDSprite.cpp  HUDSprite.h
jumpyBoy/: ScoreBoard.cpp
jumpyBoy/CollisionStrategies/: CollisionVariables.cpp  CollisionVariables.h  FlyingEnemyBehavior.cpp  FlyingEnemyBehavior.h  GroundBehaivor.cpp  GroundBehaivor.h  GroundBehavior.cpp  GroundBehavior.h  PlayerCollBehavior.cpp  PlayerCollBehavior.h  WalkingEnemyBehavior.cpp  WalkingEnemyBehavior.h
level/: Level.cpp  Level.h  LevelManager.cpp  LevelManager.h
player/: DeadState.cpp  DeadState.h  DodgingState.cpp  DodgingState.h  FallingState.cpp  FallingState.h  JumpingState.cpp  JumpingState.h  Player.cpp  Player.h  PlayerState.cpp  PlayerState.h  RunningFallState.cpp  RunningFallState.h  RunningJumpState.cpp  RunningJumpState.h  RunningState.cpp  RunningState.h  StandingState.cpp  StandingState.h
util/: CollDetection.cpp  CollDetection.h  CollEngine.cpp  CollEngine.h  Subject.h  Timer.cpp
(+71 files in other folders)
